<resources>
    <string name="app_name">GermanApp</string>
    <string name="button_start">PLAY</string>
    <string name="button_derArticle">DER</string>
    <string name="button_dieArticle">DIE</string>
    <string name="button_dasArticle">DAS</string>
    <string name="textview_currentWord">CurrentWord</string>
    <string name="textview_currentWordEnglish">CurrentWordEnglish</string>
    <string name="textview_userScore">0</string>
    <string name="title_activity_game_end">GameEnd</string>
    <string name="gameEnd">THE END</string>
    <string name="textView_DER">DER</string>
    <string name="textView_DIE">DIE</string>
    <string name="textView_DAS">DAS</string>
    <string name="noun_ratingScore">0</string>
</resources>
